# Satellite-LEO

./: .gitignore  FUNNY.md  Feedback.txt  GUIDE.md  HOWTOGETDATA.txt  Hướng dẫn thực hiện môn học (1).pptx  New_Summary.txt  README.md  REPORT.txt  REPORT_VN.txt  SUMMARY.txt  check_stats.py  pipleline.md  requirements.txt  review.txt  run_frontend.bat  run_frontend.sh  task.md  temp_readme.md
backend_cpp/: CMakeLists.txt
backend_cpp/include/: atmosphere.h  c_api.h  constants.h  contracts.h  data_loader.h  geometry.h  orbital_mechanics.h  satellite_bus.h  simulation_engine.h  stochastic.h  types.h
backend_cpp/src/: atmosphere.cpp  c_api.cpp  data_loader.cpp  geometry.cpp  main.cpp  orbital_mechanics.cpp  satellite_bus.cpp  simulation_engine.cpp  stochastic.cpp
controller_csharp/: Program.cs  README.md  SmasController.csproj
controller_csharp/AI/: InferenceEngine.cs  ObservationBuilder.cs
controller_csharp/Governor/: FdirGovernor.cs
controller_csharp/Interop/: Contracts.cs  EngineApi.cs
controller_csharp/Telemetry/: NetworkImpairment.cs  ReplayEngine.cs  TelemetryLogger.cs  TelemetryPacket.cs  WebSocketServer.cs
controller_csharp/models/: smas_bus.onnx  smas_mission.onnx  smas_nav.onnx
dataset/: Ground_Stations_raw.txt  PROBA-1_Orbit_Raw.txt  flux_10.csv  flux_30.csv  spenvis_world.csv
frontend_webgpu/: index.html  package-lock.json  package.json  vite.config.ts
frontend_webgpu/src/: App.css  index.css
marl_python/: README.md  checking.py  config.py  env_wrapper.py  export_onnx.py  mappo.py  observation.py  reward.py  test_phase2.py  test_phase3.py  train.py  validate_tle.py
marl_python/checkpoints/: mappo_best.pt  mappo_phase2_best.pt  mappo_phase3_best.pt  mappo_phase3_ep10.pt  mappo_phase3_ep100.pt  mappo_phase3_ep110.pt  mappo_phase3_ep120.pt  mappo_phase3_ep130.pt  mappo_phase3_ep140.pt  mappo_phase3_ep141.pt  mappo_phase3_ep142.pt  mappo_phase3_ep143.pt  mappo_phase3_ep144.pt  mappo_phase3_ep145.pt  mappo_phase3_ep146.pt  mappo_phase3_ep147.pt  mappo_phase3_ep148.pt  mappo_phase3_ep149.pt  mappo_phase3_ep150.pt  mappo_phase3_ep151.pt  mappo_phase3_ep152.pt  mappo_phase3_ep153.pt  mappo_phase3_ep154.pt  mappo_phase3_ep155.pt  mappo_phase3_ep156.pt  mappo_phase3_ep157.pt  mappo_phase3_ep158.pt  mappo_phase3_ep159.pt  mappo_phase3_ep160.pt  mappo_phase3_ep170.pt  mappo_phase3_ep180.pt  mappo_phase3_ep190.pt  mappo_phase3_ep20.pt  mappo_phase3_ep200.pt  mappo_phase3_ep210.pt  mappo_phase3_ep220.pt  mappo_phase3_ep230.pt  mappo_phase3_ep240.pt  mappo_phase3_ep250.pt  mappo_phase3_ep260.pt  (+10 more)
marl_python/logs/: train_log.jsonl  train_log_phase2.jsonl  train_log_phase3.jsonl
preprocessed-data/: ground_stations.json  initial_state.txt  space_weather.csv
(+19 files in other folders)
